--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Trybe - Pixel Arts</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
+
 <body>
-  <h1 id='title'>Paleta de Cores</h1>
+  <h1 id='title'>
+    Paleta de Cores
+  </h1>
+  <section id='color-palette'>
+    <div class='color' id='n1'></div>
+    <div class='color' id='n2'></div>
+    <div class='color' id='n3'></div>
+    <div class='color' id='n4'></div>
+  </section>
 </body>
+
 </html>
