--- a/index.html
+++ b/index.html
@@ -20,6 +20,44 @@
     <div class='color' id='n3'></div>
     <div class='color' id='n4'></div>
   </section>
+
+  <table id='pixel-board'>
+    <tr>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+    </tr>
+    <tr>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+    </tr>
+    <tr>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+    </tr>
+    <tr>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+    </tr>
+    <tr>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+      <td class='pixel'></td>
+    </tr>
+  </table>
 </body>
 
 </html>
