--- a/index.html
+++ b/index.html
@@ -21,43 +21,43 @@
     <div class='color' id='n4'></div>
   </section>
 
-  <table id='pixel-board'>
-    <tr>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-    </tr>
-    <tr>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-    </tr>
-    <tr>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-    </tr>
-    <tr>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-    </tr>
-    <tr>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-      <td class='pixel'></td>
-    </tr>
-  </table>
+  <section id='pixel-board'>
+    <div class='pixel-row'>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+    </div>
+    <div class='pixel-row'>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+    </div>
+    <div class='pixel-row'>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+    </div>
+    <div class='pixel-row'>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+    </div>
+    <div class='pixel-row'>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+      <div class='pixel'></div>
+    </div>
+  </section>
 </body>
 
 </html>
