--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Paleta de Cores
   </h1>
   <section id='color-palette'>
-    <div class='color' id='n1'></div>
+    <div class='color selected' id='n1'></div>
     <div class='color' id='n2'></div>
     <div class='color' id='n3'></div>
     <div class='color' id='n4'></div>
