--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Trybe - Pixel Arts</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 
 <body>
+
   <h1 id='title'>
     Paleta de Cores
   </h1>
@@ -21,43 +21,46 @@
     <div class='color' id='n4'></div>
   </section>
 
-  <section id='pixel-board'>
-    <div class='pixel-row'>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-    </div>
-    <div class='pixel-row'>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-    </div>
-    <div class='pixel-row'>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-    </div>
-    <div class='pixel-row'>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-    </div>
-    <div class='pixel-row'>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-      <div class='pixel'></div>
-    </div>
+  <section id='all-table'>
+    <section id='pixel-board'>
+      <div class='pixel-row'>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+      </div>
+      <div class='pixel-row'>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+      </div>
+      <div class='pixel-row'>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+      </div>
+      <div class='pixel-row'>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+      </div>
+      <div class='pixel-row'>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+        <div class='pixel'></div>
+      </div>
+    </section>
   </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
