--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class='color' id='n3'></div>
     <div class='color' id='n4'></div>
   </section>
+  <button id='clear-board'>Limpar</button>
 
   <section id='all-table'>
     <section id='pixel-board'>
