--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
   <h1 id='title'>
     Paleta de Cores
   </h1>
@@ -20,6 +19,12 @@
     <div class='color' id='n3'></div>
     <div class='color' id='n4'></div>
   </section>
+
+  <section id='vqv'>
+    <input type="number" min = 1 max = 50 id='board-size'>
+    <button id='generate-board'>VQV</button>
+  </section>
+
   <button id='clear-board'>Limpar</button>
 
   <section id='all-table'>
